...

import dev.angussoftware.app.blog.BlogPost

internal const val BLOG_POST_LOADING_ID = "loading"
internal const val BLOG_POST_ERROR_ID = "error"
internal const val RSS_FEED_URL = "https://rhomancer.github.io/angus-blog-content/rss.xml"
internal const val NAV_HOST_TEST_TAG = "NavHost"

internal sealed interface BlogPostLoadResult {
    data object Loading : BlogPostLoadResult

    data class Post(val value: BlogPost) : BlogPostLoadResult

...
